# rl-fruit-game

./: .gitignore  ATTRIBUTION.md  CHECKLIST.md  CLAUDE.md  README.md  SETUP.md  TODO.md  final_project_handout (1).html  pyproject.toml  requirements.txt  scripts.md
agents/: __init__.py  dqn.py  factory.py  network.py  ppo.py  ppo_features.py  replay_buffer.py
data/: README.md
docs/: README.md
models/dqn/: model_step300000.pt  model_step400000.pt  model_step50000.pt
notebooks/: README.md
notes/: experiments.md  goals.md
results/dqn/: metrics.csv  model.pt  model_step100000.pt  model_step150000.pt  model_step2000.pt  model_step200000.pt  model_step250000.pt  model_step300000.pt  model_step350000.pt  model_step400000.pt  model_step450000.pt  model_step50000.pt  model_step500000.pt
results/dqn_v2/: metrics.csv  model_step50000.pt
results/eval/: center_episodes.csv  center_summary.json  dqn_episodes.csv  dqn_summary.json  ppo_episodes.csv  ppo_summary.json  random_episodes.csv  random_summary.json
results/eval_ppo_v2_smoke/: ppo_episodes.csv  ppo_summary.json
results/ppo/: metrics.csv  slurm_11280560.out
results/ppo_v2_smoke/: metrics.csv
scripts/: compare_agents.py  eval_agent.py  play_human.py  setup_cluster.sh  train_dqn.py  train_dqn_slurm.sh  train_ppo_sb3.py  train_ppo_slurm.sh  watch_agent.py
src/agents/: __init__.py  center_agent.py  dqn.py  factory.py  network.py  ppo.py  random_agent.py  replay_buffer.py
src/scripts/: __init__.py  (+6 more)
suika_env/: __init__.py  config.py  env.py  fruits.py  render.py  world.py
tests/: __init__.py  test_agents.py  test_env.py  test_network.py  test_replay_buffer.py  test_world.py
videos/: README.md
(+7 files in other folders)
