[project]
name = "rl-fruit-game"
version = "0.1.0"
description = "DQN and PPO agents trained on a custom Suika (fruit-merging) Gymnasium environment"
requires-python = ">=3.11"
dependencies = [
    "pymunk>=6.6",
    "pygame>=2.5",
    "gymnasium>=0.29",
    "numpy>=1.26",
    "stable-baselines3>=2.0",
]

[project.scripts]
play = "scripts.play_human:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["suika_env", "scripts"]
