[project]
name = "rl-fruit-game"
version = "0.1.0"
description = "DQN and PPO agents trained on a custom Suika (fruit-merging) Gymnasium environment"
requires-python = ">=3.10"
dependencies = [
    "pymunk>=6.6",
    "pygame>=2.5",
    "gymnasium>=0.29",
    "numpy>=1.26",
    "stable-baselines3>=2.0",
    "torch>=2.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.scripts]
play = "scripts.play_human:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["suika_env", "scripts", "agents"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
